<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin" >

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.careerguidance.activity.CareerInfoActivity">

    <TextView
        android:id="@+id/career_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/line_space"
        android:text="@string/careers"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/career_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/career_name"
        android:layout_marginTop="@dimen/line_space"
        android:layout_centerHorizontal="true"
        android:src="@drawable/software_engineer" />

    <TextView
        android:id="@+id/career_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/career_image"
        android:layout_marginTop="@dimen/line_space"
        android:text="@string/career_description"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <TextView
        android:id="@+id/career_description_txt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/career_description"
        android:text="@string/career_description_txt"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/career_salary"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/career_description_txt"
        android:layout_marginTop="@dimen/line_space"
        android:text="@string/career_salary"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <TextView
        android:id="@+id/career_salary_txt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/career_salary"
        android:text="@string/career_salary_txt"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/skills_required"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/career_salary_txt"
        android:layout_marginTop="@dimen/line_space"
        android:text="@string/skills_required"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <TextView
        android:id="@+id/skills_required_txt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/skills_required"
        android:text="@string/skills_required_txt"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ListView
        android:id="@+id/listview"
        android:layout_below="@+id/skills_required"
        android:layout_marginTop="@dimen/line_space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>

</ScrollView>