<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.careerguidance.activity.MainActivity">


    <Button
        android:id="@+id/take_photo_button"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="takePhotoButton"
        android:text="@string/take_photo_button"
        android:layout_marginTop="@dimen/line_space_large" />

    <Button
        android:id="@+id/choose_photo_button"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/take_photo_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/line_space_large"
        android:onClick="choosePhotoButton"
        android:text="@string/choose_photo_button"  />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choose_photo_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/line_space_large"
        android:layout_marginBottom="@dimen/line_space_large"
        android:onClick="cancelButton"
        android:text="@string/cancel_button"  />

</RelativeLayout>